# use-llama.cpp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-Docker.md  README.md  READMEAGENT.md  RESTRUCTURING_SUMMARY.md  build-and-run.sh  docker-compose.yml  pyproject.toml  requirements.txt
examples/: basic_usage.py  interactive_chat.py
legacy/: README.md  READMEAGENT.md  cuda_demo.py  load_model_gpu.py  main.ipynb  main.py  requirements.txt  run_main.py  setup_environment.sh  simple_test.py  test_cuda.py  test_dependencies.py  test_import.py
src/use_llama_cpp/: __init__.py  __main__.py
src/use_llama_cpp/cli/: __init__.py  main.py
src/use_llama_cpp/core/: __init__.py  chat.py  model_loader.py
src/use_llama_cpp/utils/: __init__.py  gpu_checker.py
tests/: __init__.py  test_model_loader.py
